# iflam

./: .gitignore
flam-java/: build.gradle
flam-java/flams/: e_2.flam3  e_4.flam3  e_5.flam3  e_5_1.flam3  linear_1.flam3  mandelbrot.flam3  render.sh  test1.flam3  test10.flam3  test11.flam3  test2.flam3  test3.flam3  test3_notemp.flam3  test4.flam3  test5.flam3  test6.flam3  test7.flam3  test8.flam3  test9.flam3
flam-java/sheeps/: 10487.flam3  10913.flam3  10940.flam3  10960.flam3  10973.flam3  10998.flam3  10999.flam3  11037.flam3  11044.flam3  11046.flam3  11048.flam3  11147.flam3  11157.flam3  11562.flam3  11816.flam3  11818.flam3  11819.flam3  11886.flam3  11893.flam3  11895.flam3  11896.flam3  11913.flam3  11927.flam3  11967.flam3  12020.flam3  12023.flam3  12057.flam3  12063.flam3  12064.flam3  12078.flam3  12079.flam3  12080.flam3  12082.flam3  12095.flam3  12191.flam3  12240.flam3  12425.flam3  12452.flam3  12477.flam3  12747.flam3  (+103 more)
flam-java/src/flam/: AnimationMain.java  AnimationProvider.java  Colors.java  Constants.java  Convolution.java  DeepCopy.java  FlamComponent.java  FlamGenome.java  GaussianFilter.java  Genome.java  GenomeProvider.java  GenomeView.java  Main.java  MyMath.java  RandomDisturbanceProvider.java  RenderBuffer.java  RenderState.java  Renderer.java  Rnd.java  TransitionGenomeProvider.java  TransitionMain.java  View2D.java  ViewMain.java  Xform.java  flam3.java
flam-java/src/flam/fgl/: CubeObject.java  FBCubes.java  Main.java
flam-java/src/flam/mains/: AnimationMain.java  SlideshowMain.java  TransitionAnimateMain.java  TransitionMain.java  VerifyFlams.java  ViewMain.java
flam-java/src/flam/progressive/: ProgressiveBuffer.java  ProgressiveRenderer.java  ProgressiveState.java
flam-java/src/flam/renderers/escape/: EscapeRenderer.java  EscapeState.java
flam-java/src/flam/renderers/progressive/: ProgressiveRenderer.java  ProgressiveState.java
flam-java/src/flam/renderers/ria/: RIABuffer.java  RIARenderer.java
flam-java/src/flam/ria/: RIABuffer.java  RIARenderer.java  RIAState.java  flam3.java
flam-java/src/flam/util/: GaussianFilter.java  MyMath.java  Rnd.java  View2D.java
flam-java/src/main/java/flam/: Constants.java  FlamComponent.java  Genome.java  GenomeProvider.java  RandomDisturbanceProvider.java  RenderBuffer.java  TransitionGenomeProvider.java  Xform.java
flam-java/src/main/java/flam/fgl/: Main.java
flam-java/src/main/java/flam/mains/: AnimationMain.java  SlideshowMain.java  TransitionAnimateMain.java  VerifyFlams.java
flam-java/src/main/java/flam/renderers/escape/: EscapeBuffer.java
flam-java/src/main/java/flam/tools/: MirrorEsheep.java
flam-java/src/main/java/flam/util/: Colors.java  Convolution.java  DeepCopy.java  MyMath.java
iflam/: AppDelegate.h  AppDelegate.mm  CMakeFunctions.txt  CMakeLists.txt  FlamView.h  FlamView.mm  IterateOperation.h  IterateOperation.mm  README.md  color.cpp  color.h  color_test.cpp  common.cpp  common.h  genome.cpp  genome.h  hdf5_main.cpp  iflam-Info.plist  iflam.sublime-project  iflamAppDelegate.h  iflamAppDelegate.m  iflamAppDelegate.mm  main.cpp  perf_test.cpp  renderer.cpp  renderer.h  todo.txt
iflam.xcodeproj/: project.pbxproj
iflam/_ios/: app_delegate.h  app_delegate.mm  flam-Info.plist  flam_view.h  flam_view.mm  flam_view_controller.mm
iflam/_ios/flam/flam/: CMakeLists.txt  flam-Info.plist  flamViewController.h  main.m
iflam/_ios/flam/flam/en.lproj/: MainWindow.xib
iflam/_ios/iflam.xcodeproj/: project.pbxproj
iflam/_ios/iflam/iflam/: iflamAppDelegate.h  iflamAppDelegate.m  iflamViewController.h  main.m
iflam/_ios/iflam/iflam.xcodeproj/: project.pbxproj
iflam/_ios/iflam/iflam/en.lproj/: MainWindow.xib  iflamViewController.xib
iflam/cmake/: iphone-simulator.toolchain  iphone.toolchain
iflam/cmd/: CMakeLists.txt  hdf5_main.cpp  main.cpp
iflam/core/: CMakeLists.txt  animator.cpp  animator.h  clrenderer.cl  color.cpp  color.h  color_test.cpp  common.cpp  common.h  component.cpp  component.h  controller.cpp  controller.h  genome.cpp  genome.h  renderer.cpp  renderer.h
iflam/en.lproj/: MainMenu.xib
iflam/fft/: FFTBufferManager.cpp  FFTBufferManager.h  SpectrumAnalysis.h
iflam/gl/: CMakeLists.txt  bin2c.c  blur.fragment  blur.vertex  flam_gl_view.cpp  flam_gl_view.h  main.cpp  render.cpp  render.fragment  render.vertex  render_main.fragment
iflam/iflam.xcdatamodeld/: .xccurrentversion
iflam/ios/: CMakeLists.txt  FlamView.h  FlamView.mm  TODO  app_delegate.mm  flam-Info.plist  flamAppDelegate.m  flamViewController.m  flam_view.h  flam_view.mm  flam_view_controller.h  flam_view_controller.mm  flam_view_model.h  flam_view_model.mm
iflam/ios/flam/flam/: flam-Prefix.pch  flamAppDelegate.h
iflam/ios/flam/flam.xcodeproj/: project.pbxproj
iflam/ios/flam/flam/en.lproj/: flamViewController.xib
iflam/ios/iflam/iflam/: iflam-Info.plist  iflam-Prefix.pch  iflamViewController.m
iflam/ios/ios/: FlamView.h  FlamView.mm  FlamiosAppDelegate.h  FlamiosAppDelegate.mm  FlamiosViewController.h  FlamiosViewController.mm  ios-Info.plist  ios-Prefix.pch  main.m
iflam/ios/ios.xcodeproj/: project.pbxproj
iflam/osx/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  FlamView.h  FlamView.mm  iflam-Info.plist  iflam-Prefix.pch  main.m  main.mm
iflam/osx/CA/PublicUtility/: CABundleLocker.h  CAFilePathUtils.cpp  CAPThread.cpp  CAProcess.cpp
iflam/osx/en.lproj/: MainMenu.xib
iflam/osx_xcode/iflam.xcodeproj/: project.pbxproj
iflamTests/: iflamTests-Info.plist  iflamTests-Prefix.pch  iflamTests.h  iflamTests.m
mathematica/: hdr.nb
sheeps/: 10348.flam3  10461.flam3  10462.flam3  10475.flam3  10934.flam3  10938.flam3  10939.flam3  10946.flam3  10947.flam3  10992.flam3  11000.flam3  11007.flam3  11045.flam3  11047.flam3  11050.flam3  11148.flam3  11155.flam3  11202.flam3  11257.flam3  11401.flam3  11817.flam3  11820.flam3  11821.flam3  11825.flam3  11855.flam3  11873.flam3  11897.flam3  11910.flam3  11971.flam3  11997.flam3  12055.flam3  12056.flam3  12076.flam3  12077.flam3  12084.flam3  12086.flam3  12093.flam3  12097.flam3  12099.flam3  12100.flam3  (+150 more)
(+3 files in other folders)
